--- a/views/index.html
+++ b/views/index.html
@@ -633,8 +633,7 @@
 
                         
                         <% let mintEntryUrl = "http://" + srcMintEntry.ipaddr + ":" + srcMintEntry.port.toString() + '/join/'+pulseGroup.mintTable[0].ipaddr+":"+pulseGroup.mintTable[0].port; %>
-                        <td class="<%= srcMintEntry.geo srcMintEntry.state %>"><a target="_blank" href="<%= mintEntryUrl %>"><%= srcMintEntry.geo %></a></td>
-
+                        <td class="<%= srcMintEntry.state %>"><a target="_blank" href="<%= mintEntryUrl %>"><%= srcMintEntry.geo %></a></td>
                         <td><input type="text" name="dropName" /></td>
                         
                         <td><%= srcMintEntry.port %></td>
