--- a/views/index.html
+++ b/views/index.html
@@ -635,7 +635,7 @@
                         <% let mintEntryUrl = "http://" + srcMintEntry.ipaddr + ":" + srcMintEntry.port.toString() + '/join/'+pulseGroup.mintTable[0].ipaddr+":"+pulseGroup.mintTable[0].port; %>
                         <td class="<%= srcMintEntry.state %>"><a target="_blank" href="<%= mintEntryUrl %>"><%= srcMintEntry.geo %></a></td>
 
-                        <td><input type="text" class="dropName" name="dropName" onchange   = "alert(me.geo+' REQUEST '+me.ipaddr+':'+me.port+' PASTED '+this.value+' yields '+this.value+'/join/me.ipaddr');" onkeypress = "this.onchange();" onpaste = "this.onchange();" oninput = "this.onchange();" /></td>
+                        <td><input type="text" class="dropName" name="dropName" onchange   = "alert(' REQUEST '+this.value+'/join'+me.ipaddr+':'+me.port);" onkeypress = "this.onchange();" onpaste = "this.onchange();" oninput = "this.onchange();" /></td>
                         
                         <td><%= srcMintEntry.port %></td>
 
