--- a/views/index.html
+++ b/views/index.html
@@ -11,10 +11,10 @@
         $(document).ready(function() {
             console.log("document loaded - BUG HERE: we assume only one table ");
             fetchState();
-            $('#matrix').DataTable({'iDisplayLength': 25});
-            $('#extraordinary').DataTable({'iDisplayLength': 100});
-            $('#pulses').DataTable({'iDisplayLength': 25});
-            $('#mintTable').DataTable({'iDisplayLength': 25});
+            //$('#matrix').DataTable({'iDisplayLength': 25});
+            //$('#extraordinary').DataTable({'iDisplayLength': 100});
+            //$('#pulses').DataTable({'iDisplayLength': 25});
+            //$('#mintTable').DataTable({'iDisplayLength': 25});
             //console.log(`index.html - launched`);
         });
         
