--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
             console.log("document loaded - BUG HERE: we assume only one table ");
             fetchState();
             //$('#matrix').DataTable({'iDisplayLength': 25});
-            //$('#extraordinary').DataTable({'iDisplayLength': 100});
+            $('#extraordinary').DataTable({'iDisplayLength': 25});
             //$('#pulses').DataTable({'iDisplayLength': 25});
             //$('#mintTable').DataTable({'iDisplayLength': 25});
             //console.log(`index.html - launched`);
