--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
         $(document).ready(function() {
             console.log("document loaded - BUG HERE: we assume only one table ");
             fetchState();
-            //$('#matrix').DataTable({'iDisplayLength': 25});
+            $('#matrix').DataTable({'iDisplayLength': 25});
             $('#extraordinary').DataTable({'iDisplayLength': 25});
             //$('#pulses').DataTable({'iDisplayLength': 25});
             //$('#mintTable').DataTable({'iDisplayLength': 25});
