--- a/views/index.html
+++ b/views/index.html
@@ -41,7 +41,7 @@
                     //console.log("---------------------------- - - - - - - -> p= "+p);
                     var pulseGroup=pulseGroups[p];
                     
-                    console.log(`pulseGroup ${pulseGroup.groupName} has ${pulseGroup.nodeCount} member nodes`)    
+                    //console.log(`pulseGroup ${pulseGroup.groupName} has ${pulseGroup.nodeCount} member nodes`)    
                     //var pulseGroup = config[n];
                     //console.log("index.html: pulseGroups="+JSON.stringify(pulseGroups,null,2) );
                     // Fill the OWL matrix using only the owls - TODO: remove matrix ugliness.
