--- a/views/index.html
+++ b/views/index.html
@@ -45,7 +45,7 @@
                     //
                     //
                     //
-                    if (pulseGroup.owner==me.geo) {
+                    //if (pulseGroup.owner==me.geo) {
 
 
                     //console.log(`pulseGroup ${pulseGroup.groupName} has ${pulseGroup.nodeCount} member nodes`)    
@@ -255,7 +255,7 @@
 //
 //
 //
-              }
+ //             }
 
 
 
