--- a/views/index.html
+++ b/views/index.html
@@ -43,7 +43,7 @@
                     
 
                     //
-                    //
+                    //  could only show own matrix, not ones it participates in
                     //
                     //if (pulseGroup.owner==me.geo) {
 
