--- a/views/index.html
+++ b/views/index.html
@@ -313,7 +313,7 @@
 </head>
 <body>    
     <!--<h1><%= me.geo %> PulseGroup Encrypted Mesh WAN http://<%= me.ipaddr %>:<%= me.port %> <%= config.VERSION %> ALPHA Test 2.0</h1> -->
-    <h1><%= me.geo %> http://<%= me.ipaddr %>:<%= me.port %> ALPHA <%= config.VERSION %> </h1>
+    <h1><%= me.geo %>DARP off-blockchain transctions @ http://<%= me.ipaddr %>:<%= me.port %> nodeJS Modeling DARP : <%= config.VERSION %> </h1>
 
     <% var d = new Date(); %>
     <% function now() { var dateNow = new Date(); return dateNow.getTime(); } %>
@@ -334,7 +334,7 @@
     <% for (var p in myPulseGroups) { %>
         <% var pulseGroup=myPulseGroups[p];   %>
 
-        <h1> Pulse Group: <%= pulseGroup.groupName %>  POLLFREQ <%= pulseGroup.cycleTime %> seconds</h1>
+        <h1> Off-Chain Blockchain for pulseGroup: <%= pulseGroup.groupName %>  POLLFREQ <%= pulseGroup.cycleTime %> seconds</h1>
 
         <!-- show OWL Matrix table -->
             <br><h2><%= pulseGroup.groupName %> pulseGroup: <%= pulseGroup.groupName %></h2>
