--- a/views/index.html
+++ b/views/index.html
@@ -324,7 +324,7 @@
 
 
     <p id="dateTime">*Refresh: <%= timeStr %> Your Docker: <a href="http://localhost:65013/"> http://localhost:65013/ </a> MAXNODES= <%= config.MAXNODES %></p>
-
+    <p><%= config.GENESISNODELIST %></p>
 
 
 
