--- a/views/index.html
+++ b/views/index.html
@@ -313,7 +313,7 @@
 </head>
 <body>    
     <!--<h1><%= me.geo %> PulseGroup Encrypted Mesh WAN http://<%= me.ipaddr %>:<%= me.port %> <%= config.VERSION %> ALPHA Test 2.0</h1> -->
-    <h1><%= me.geo %>DARP off-blockchain transctions @ http://<%= me.ipaddr %>:<%= me.port %> nodeJS Modeling DARP : <%= config.VERSION %> </h1>
+    <h1><%= me.geo %> DARP @ http://<%= me.ipaddr %>:<%= me.port %> nodeJS Modeling DARP : <%= config.VERSION %> </h1>
 
     <% var d = new Date(); %>
     <% function now() { var dateNow = new Date(); return dateNow.getTime(); } %>
