--- a/views/index.html
+++ b/views/index.html
@@ -334,7 +334,7 @@
     <% for (var p in myPulseGroups) { %>
         <% var pulseGroup=myPulseGroups[p];   %>
 
-        <h1> Off-Chain Blockchain for pulseGroup: <%= pulseGroup.groupName %>  POLLFREQ <%= pulseGroup.cycleTime %> seconds</h1>
+        <h1> pulseGroup: <%= pulseGroup.groupName %>  POLLFREQ <%= pulseGroup.cycleTime %> seconds</h1>
 
         <!-- show OWL Matrix table -->
             <br><h2><%= pulseGroup.groupName %> pulseGroup: <%= pulseGroup.groupName %></h2>
