--- a/views/index.html
+++ b/views/index.html
@@ -437,8 +437,8 @@
                 <th>pulseTimestamp</th>
                 <th>mint</th>
                 <th>owl</th>
-                <th>rtt</th>
-                <th>wg rtt</th>
+                <th>Ping</th>
+                <th>wgPing</th>
                 <th>relayCount</th>
                 <!-- <th>median</th>
                 <th>owls</th>
