--- a/views/index.html
+++ b/views/index.html
@@ -608,7 +608,7 @@
                 <th>dropHere2join</th>
                 <th>port</th>
                 <th>ipaddr</th>
-                <th>publickey</th>
+                <th>publickey (auto-gen from end-points)</th>
                 <th>state</th>
                 <th>lastPulseTimestamp</th>
                 <th>lastOWL</th>
