--- a/views/index.html
+++ b/views/index.html
@@ -34,7 +34,7 @@
             //console.log("index.html: fetchState(): url="+url);
             $.getJSON(url, function(pulseGroups) {
                 $(document.body).css( "background", "white" );
-                console.log("fetcState() about to work through each pulseGroups  ** = - = - = - = - ******************** pulseGroups="+JSON.stringify(pulseGroups,null,2));
+                //console.log("fetcState() about to work through each pulseGroups  ** = - = - = - = - ******************** pulseGroups="+JSON.stringify(pulseGroups,null,2));
                 //console.log(`fetcState() about to work through each pulseGroups`);
                 
                 for (var p in pulseGroups ) {
