--- a/views/index.html
+++ b/views/index.html
@@ -354,8 +354,9 @@
         </tr>
         </thead>
         <tbody>
-        <% for (let src in pulseGroup.matrix) { %>
+        <% var firstEntry=true; for (let src in pulseGroup.matrix) { %>
             <% let srcMintEntry = pulseGroup.mintTable[src]; %>
+            <%     if (firstEntry) { firstEntry=false; continue; }
             <% if (srcMintEntry != null) { %>
                 <% if (srcMintEntry.state == "UP") { %>
                     <% let classNameUp = srcMintEntry.geo + " UP"; %>
