--- a/views/index.html
+++ b/views/index.html
@@ -356,7 +356,7 @@
         <tbody>
         <% var firstEntry=true; for (let src in pulseGroup.matrix) { %>
             <% let srcMintEntry = pulseGroup.mintTable[src]; %>
-            <%     if (firstEntry) { firstEntry=false; continue; }
+            <%     if (firstEntry) { firstEntry=false; continue; } %>
             <% if (srcMintEntry != null) { %>
                 <% if (srcMintEntry.state == "UP") { %>
                     <% let classNameUp = srcMintEntry.geo + " UP"; %>
